<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/character_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/beliy_fon" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/creation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_button_press_azure"
                android:minWidth="1000dp"
                android:minHeight="48dp"
                android:paddingLeft="45dp"
                android:text="@string/char_creation"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/gender_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="50dp"
                android:paddingLeft="39dp"
                android:text="@string/char_creation_gender"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp">

                <ToggleButton
                    android:id="@+id/button_Man"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="135dp"
                    android:background="@drawable/create_button_press_blue"
                    android:textOff="@string/char_creation_gender_Man"
                    android:textOn="@string/char_creation_gender_Woman" />


            </LinearLayout>

            <TextView
                android:id="@+id/enter_name"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="90dp"
                android:text="@string/char_creation_name_text"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/PersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:background="@drawable/style_gray"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/PersonFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/style_gray"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="225dp"
                    android:background="@drawable/startovoe_button_press_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:text="@string/char_creation_back"
                    android:textAllCaps="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="225dp"
                    android:background="@drawable/startovoe_button_press_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/char_creation_next"
                    android:textAllCaps="false"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>