<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/startovoe_fon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/startovoe_fon" />

    <LinearLayout
        android:id="@+id/StartovoeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        android:padding="10dp">


        <Button
            android:id="@+id/buttonStartovoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:text="@string/startovoe_no_act"
            android:textAllCaps="false"
            android:textSize="50sp"
            android:visibility="visible" />


    </LinearLayout>

    <Button
        android:id="@+id/button_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="70dp"
        android:text="@string/startovoe_memory"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="70dp"
        android:text="@string/startovoe_next"
        android:visibility="visible" />


</RelativeLayout>